# rust-data-systems-lab

./: Cargo.toml  README.md
crates/arrow-ops/: Cargo.toml
crates/arrow-ops/examples/: record_batch.rs
crates/arrow-ops/src/: kernels.rs  lib.rs  transforms.rs
crates/etl-engine/: Cargo.toml
crates/fusion-extensions/: Cargo.toml
crates/fusion-extensions/src/: lib.rs  udfs.rs
crates/pipeline-core/: Cargo.toml
crates/pipeline-core/examples/: 01_basic_pipeline.rs  02_chunked_file_pipeline.rs  03_datafusion_pipeline.rs  hello.rs
crates/pipeline-core/src/: basic_pipeline.rs  chunked_file_pipeline.rs  datafusion_pipeline.rs  lib.rs
